# create_rays

./: .gitignore  laser_doc.md  ml_fully_connected_base_model_1.xml  pyproject.toml  readme.md  requirements.txt
scripts/: bu.py  generate_hit_pos.py  intro.py  mapping.py  mapping_full.py  open3d_visualize_predicted_welding_spot.py  predict_poses.py  test.py  test_torch.py  visualize_predicted_welding_spot.py  visualize_welding_spot.py
