[tool.poetry]
name = "kikoff_components_in_pybullet"
version = "0.1.0"
description = ""
authors = ["Que0Le <lebanhat95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pybullet = "^3.2.5"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
